improve config file

--- a/configs/default.config
+++ b/configs/default.config
@@ -2,7 +2,6 @@ server {
     server_name example.com;
 
     listen 127.0.0.1:8080;
-    listen 0.0.0.0:8081;
 
     root /var/www/html;
     index index.html;
@@ -27,6 +26,10 @@ server {
         return 301 /files;
     }
 
+    location /kapouet {
+        root /tmp/www;
+    }
+
     location /upload {
         allow_methods POST;
         upload on;
@@ -45,3 +48,52 @@ server {
     }
 }
 
+server {
+    server_name example1.com;
+
+    listen 0.0.0.0:8081;
+
+    root /var/www/html;
+    index index.html;
+    client_max_body_size 2K;
+
+    error_page 400 /errors/400.html;
+    error_page 501 /errors/501.html;
+
+    location / {
+        allow_methods GET;
+        autoindex off;
+    }
+
+    location /files {
+        root /data/public;
+        autoindex on;
+        index index.html;
+        allow_methods GET;
+    }
+
+    location /old {
+        return 301 /files;
+    }
+
+    location /kapouet {
+    root /tmp/www;
+    }
+
+    location /upload {
+        allow_methods POST;
+        upload on;
+        upload_store /data/uploads;
+    }
+
+    location /cgi-bin {
+        allow_methods GET POST;
+
+        root /var/www/cgi-bin;
+        index index.py;
+
+        cgi on;
+        cgi_exec .py /usr/bin/python3;
+        cgi_exec .sh /bin/bash;
+    }
+}
