--- a/configs/default.config
+++ b/configs/default.config
@@ -3,7 +3,7 @@ server {
 
     listen 127.0.0.1:8080;
 
-    root /var/www/html;
+    root ./www/html;
     index index.html;
     client_max_body_size 5M;
 
@@ -16,7 +16,7 @@ server {
     }
 
     location /files {
-        root /data/public;
+        root ./www/html/files;
         autoindex on;
         index index.html;
         allow_methods GET;
@@ -27,19 +27,20 @@ server {
     }
 
     location /kapouet {
-        root /tmp/www;
+        root ./www/html/kapouet;
+        index index.html;
     }
 
     location /upload {
         allow_methods POST;
         upload on;
-        upload_store /data/uploads;
+        upload_store ./www/uploads;
     }
 
     location /cgi-bin {
         allow_methods GET POST;
 
-        root /var/www/cgi-bin;
+        root ./www/cgi-bin;
         index index.py;
 
         cgi on;
@@ -53,7 +54,7 @@ server {
 
     listen 0.0.0.0:8081;
 
-    root /var/www/html;
+    root ./www/html;
     index index.html;
     client_max_body_size 2K;
 
@@ -66,7 +67,7 @@ server {
     }
 
     location /files {
-        root /data/public;
+        root ./www/html/files;
         autoindex on;
         index index.html;
         allow_methods GET;
@@ -77,19 +78,20 @@ server {
     }
 
     location /kapouet {
-    root /tmp/www;
+        root ./www/html/kapouet;
+        index index.html;
     }
 
     location /upload {
         allow_methods POST;
         upload on;
-        upload_store /data/uploads;
+        upload_store ./www/uploads;
     }
 
     location /cgi-bin {
         allow_methods GET POST;
 
-        root /var/www/cgi-bin;
+        root ./www/cgi-bin;
         index index.py;
 
         cgi on;
