--- a/configs/test.config
+++ b/configs/test.config
@@ -3,7 +3,7 @@ server {
 
     listen 127.0.0.1:8080;
 
-    root /var/www/html;
+    root ./www/html;
     index index.html;
     client_max_body_size 5M;
 
